2007-01-13  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>

	* fvwm/style.c (style_parse_icon_box_style):
	* fvwm/virtual.c (HandlePaging):
	* fvwm/stack.c (verify_stack_ring_consistency):
	(ResyncFvwmStackRing):
	* fvwm/repeat.c:
	* fvwm/read.c (cursor_control):
	* fvwm/placement.c (__place_get_wm_pos):
	* fvwm/move_resize.c (GetMoveArguments):
	(ParseOneResizeArgument):
	(GetResizeArguments):
	(GetResizeMoveArguments):
	(resize_move_window):
	(resize_move_window):
	(InteractiveMove):
	(__move_window):
	(DoSnapAttract):
	(DoSnapAttract):
	(__resize_step):
	(__resize_window):
	(__resize_window):
	(__resize_window):
	(MaximizeHeight):
	(MaximizeWidth):
	(maximize_fvwm_window):
	(CMD_Maximize):
	(CMD_Maximize):
	* fvwm/misc.c:
	* fvwm/menustyle.h (MenuStyle):
	* fvwm/menus.c (MenuSizingParameters):
	(make_menu_window):
	(paint_menu_gradient_background):
	(paint_menu_gradient_background):
	(select_menu_item):
	(do_menus_overlap):
	(pop_menu_up):
	(pop_menu_down_and_repaint_parent):
	(__mloop_handle_action_without_mi):
	(do_menu):
	(get_menu_options):
	(get_menu_options):
	* fvwm/menuroot.h (MenuRootStatic):
	(MenuRootDynamic):
	* fvwm/menuitem.h (MenuPaintItemParameters):
	* fvwm/menugeometry.h:
	* fvwm/menubindings.c (menu_shortcuts):
	* fvwm/icons.c (SetIconPixmapSize):
	(GetIconPicture):
	(DrawIconTitleWindow):
	(AutoPlaceIcon):
	(do_all_iconboxes):
	(GetIconWindow):
	(GetIconBitmap):
	* fvwm/gnome.c (GNOME_GetHintIcons):
	* fvwm/functions.c (FvwmFunction):
	(__execute_function):
	(__cf_cleanup):
	(execute_complex_function):
	* fvwm/fvwm.c (JunkWidth):
	(JunkHeight):
	(JunkBW):
	(JunkDepth):
	(JunkMask):
	(main):
	* fvwm/externs.h (JunkWidth):
	(JunkHeight):
	(JunkBW):
	(JunkDepth):
	(JunkMask):
	* fvwm/focus.c (CMD_WarpToWindow):
	* fvwm/expand.c (__eae_parse_range):
	(expand_args_extended):
	(expand_vars_extended):
	(expand_vars_extended):
	* fvwm/ewmh_names.c (EWMH_WMIconName):
	(EWMH_WMName):
	* fvwm/ewmh_intern.h:
	* fvwm/ewmh_icons.c (ewmh_WMIcon):